# mlops-lab

./: .pre-commit-config.yaml  Help  LICENSE  Makefile  README.md  conda.yaml  pyproject.toml
datastores/raw_text_data/: journal.txt
lab1/src/lab1/data_preprocessing/: preprocessing.py
lab1/tests/unit_tests/: conftest.py  test_preprocessing.py
mlops-lab1-instruction/code-quality/: README.md
mlops-lab1-instruction/code-versioning/: README.md
mlops-lab1-instruction/data-versioning/: README.md
mlops-lab1-instruction/environement-management-package/: README.md
notebook/: eda.ipynb
