[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "TouyeAchille",email = "touyejunior@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.9.0,<26.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "lab1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
